--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8080
+    port: 8081
 spring:
     mvc:
         converters:
@@ -14,4 +14,7 @@ spring:
         url: "jdbc:mysql://localhost:3306/users"
         username: "root"
         password: "root"
-
+eureka:
+    client:
+        serviceUrl:
+            defaultZone: http://localhost:8083/eureka
