--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 springdoc.swagger-ui.path=/swagger-ui
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+rabbitmq.exchange=testexchange
+rabbitmq.queue=testqueue
+rabbitmq.routingkey=testkey
+spring.main.allow-bean-definition-overriding=true
