--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,27 @@
 server:
     port: 8081
 spring:
-    mvc:
-        converters:
-            preferred-json-mapper: gson
-    application:
-        name: AUTHENTICATIONAPI
+    datasource:
+        url: jdbc:h2:mem:virtual
+        username: root
+        password: root
+        driverClassName: org.h2.Driver
+    #    datasource:
+    #        url: "jdbc:mysql://kbp7pqomca4c.eu-central-2.psdb.cloud/kwetter?sslMode=VERIFY_IDENTITY"
+    #        username: "i0ztusobkany"
+    #        password: "pscale_pw_4ityE8og2X-lj58FwFJfuGCd7UEC1MMP7E32Lhec80Q"
     jpa:
-        database: mysql
+        spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+        generate-ddl: true
         hibernate:
             ddl-auto: update
-    datasource:
-        url: "jdbc:mysql://localhost:3306/users"
-        username: "root"
-        password:
+    application:
+        name: AUTHENTICATIONAPI
+    h2:
+        console.enabled: true
+        console.path: /h2-console
+        console.settings.trace: false
+        spring.h2.console.settings.web-allow-others: false
 eureka:
     client:
         serviceUrl:
