--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,9 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Build with Maven after running integration and unit tests
-      run: mvn --batch-mode --update-snapshots verify
-
-
+    - name: Load secrets from .env file
+      env:
+        PROD_ENV_FILE: ${{ secrets.USER_SECRETS }}
   linting: 
     runs-on: ubuntu-latest
     needs: [build]
