--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,9 +5,9 @@ spring:
         hibernate:
             ddl-auto: update
     datasource:
-        url: "jdbc:mysql://localhost:3306/users"
-        username: "root"
-        password: "root"
+        url: "${SPRING_DATASOURCE_URL}"
+        username: "${SPRING_DATASOURCE_USERNAME}"
+        password: "${SPRING_DATASOURCE_PASSWORD}"
     config:
             activate:
                 on-profile: prod
