--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,10 +18,10 @@ jobs:
       name: create .env file
       run: |
         touch .env
-        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-        echo SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} >> .env
-        echo SPRING_DATASOURCE_USERNAMED=${{ secrets.SPRING_DATASOURCE_USERNAME }} >> .env
-        echo SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} >> .env
+        echo SECRET_KEY=${{ secrets.SECRET_KEY }} > .env
+        echo SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} > .env
+        echo SPRING_DATASOURCE_USERNAMED=${{ secrets.SPRING_DATASOURCE_USERNAME }} > .env
+        echo SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} > .env
         cat .env
       env: 
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
