--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,20 +14,30 @@ jobs:
     -
       name: Checkout code
       uses: actions/checkout@v2
+#       name: create .env file
+#       run: |
+#         touch .env
+#         echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+#         echo SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} >> .env
+#         echo SPRING_DATASOURCE_USERNAMED=${{ secrets.SPRING_DATASOURCE_USERNAME }} >> .env
+#         echo SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} >> .env
+#         cat .env
+#       env: 
+#         SECRET_KEY: ${{ secrets.SECRET_KEY }}
+#         SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
+#         SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
+#         SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
     - 
-      name: create .env file
-      run: |
-        touch .env
-        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-        echo SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} >> .env
-        echo SPRING_DATASOURCE_USERNAMED=${{ secrets.SPRING_DATASOURCE_USERNAME }} >> .env
-        echo SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} >> .env
-        cat .env
-      env: 
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      name: Make envfile
+      uses: SpicyPizza/create-envfile@v1
+      with:
+        envkey_DEBUG: false
+        envkey_SOME_API_KEY: "123456abcdef"
+        envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
         SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
         SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
+        file_name: .env
     - 
       name: Login to DockerHub
       uses: docker/login-action@v2
