--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ rabbitmq.exchange=testexchange
 rabbitmq.queue=testqueue
 rabbitmq.routingkey=testkey
 spring.main.allow-bean-definition-overriding=true
+eureka.instance.preferIpAddress=true
